// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[STORE] - UI actions Should close the dashboard 1`] = `
Object {
  "payload": Object {
    "open": false,
  },
  "type": "SET_DASHBOARD_DATE_TIME",
}
`;

exports[`[STORE] - UI actions Should open the dashboard 1`] = `
Object {
  "payload": Object {
    "open": true,
  },
  "type": "SET_DASHBOARD_DATE_TIME",
}
`;

exports[`[STORE] - UI actions Should set the visible month 1`] = `
Object {
  "payload": Object {
    "visibleMonth": "2018-07-01T05:00:00.000Z",
  },
  "type": "SET_VISIBLE_MONTH",
}
`;

exports[`[STORE] - UI actions Should toggle the dashboard 1`] = `
Object {
  "type": "TOGGLE_DASHBOARD_DATE_TIME",
}
`;
